# smartthings4cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  vcpkg-configuration.json  vcpkg.json
TestResults/3b196af0-c673-44ef-88cd-bbd08c36b3d6/: Herve-perso_DESKTOP-UBU70D8_2026-07-05.16_33_52.coverage
cmake/: smartthings4cppConfig.cmake.in
docs/: README.md  authentication.md  capabilities.md  device-model.md  examples.md  extending.md  getting-started.md  live-updates.md  troubleshooting.md  webhook-security.md
examples/: CMakeLists.txt  authentication.cpp  device_control.cpp  device_listing.cpp  event_updates.cpp  full_discovery.cpp  live_updates.cpp  oauth2_authentication.cpp
include/smartthings4cpp/: base64.h  capabilities.h  capability.h  client.h  component.h  device.h  exceptions.h  http_client.h  http_server.h  json_utils.h  smartthings4cpp.h  storage.h  types.h  webhook.h  webhook_signature.h
include/smartthings4cpp/capabilities/: audio_mute.h  audio_volume.h  contact_sensor.h  custom.h  demand_response_load_control.h  execute.h  hca.h  media_input_source.h  media_playback.h  media_track_control.h  ocf.h  power_consumption_report.h  refresh.h  refrigeration.h  remote_control_status.h  samsungce.h  samsungim.h  samsungvd.h  sec.h  standard.h  switch.h  switch_level.h  temperature_measurement.h  thermostat_cooling_setpoint.h  tv_channel.h  unknown_capability.h  washer_operating_state.h
include/smartthings4cpp/capabilities/custom/: accessibility.h  deodor_filter.h  device_report_state_configuration.h  disabled_capabilities.h  disabled_components.h  dishwasher_delay_start_time.h  dishwasher_operating_percentage.h  dishwasher_operating_progress.h  dryer_dry_level.h  dust_filter.h  energy_type.h  error.h  fridge_mode.h  job_beginning_status.h  launchapp.h  picturemode.h  recording.h  soundmode.h  supported_options.h  thermostat_setpoint_control.h  tvsearch.h  washer_auto_detergent.h  washer_auto_softener.h  washer_rinse_cycles.h  washer_soil_level.h  washer_spin_level.h  washer_water_temperature.h  water_filter.h
include/smartthings4cpp/capabilities/hca/: washer_mode.h
include/smartthings4cpp/capabilities/samsungce/: accessibility.h  audio_volume_level.h  auto_dispense_detergent.h  auto_dispense_softener.h  auto_open_door.h  connection_state.h  detergent_auto_replenishment.h  detergent_order.h  detergent_state.h  device_applications_and_settings.h  device_identification.h  dishwasher_job_state.h  dishwasher_operation.h  dishwasher_washing_course.h  dishwasher_washing_course_details.h  dishwasher_washing_options.h  dongle_software_installation.h  driver_state.h  driver_version.h  energy_planner.h  food_defrost.h  freezer_convert_mode.h  fridge_icemaker_info.h  fridge_pantry_info.h  fridge_pantry_mode.h  fridge_vacation_mode.h  fridge_welcome_lighting.h  fridge_zone_info.h  kids_lock.h  meat_aging.h  operation_origin.h  power_cool.h  power_freeze.h  quick_control.h  sabbath_mode.h  self_check.h  softener_auto_replenishment.h  softener_order.h  softener_state.h  software_update.h  (+17 more)
include/smartthings4cpp/capabilities/samsungim/: fixed_find_node.h  hue_sync_mode.h
include/smartthings4cpp/capabilities/samsungvd/: ambient.h  ambient_content.h  art.h  audio_group_info.h  audio_input_source.h  device_category.h  firmware_version.h  launch_service.h  light_control.h  media_input_source.h  remote_control.h  sound_detection.h  sound_from.h  supports_features.h  supports_power_on_by_ocf.h  thing_status.h
include/smartthings4cpp/capabilities/sec/: diagnostics_information.h  (+2 more)
include/smartthings4cpp/oauth2/: oauth2_authenticator.h  oauth2_types.h
overlay-ports/reactivelitepp/: portfile.cmake  usage  vcpkg.json
src/: CMakeLists.txt  base64.cpp  capability.cpp  client.cpp  device.cpp  http_client.cpp  http_server.cpp  json_utils.cpp  storage.cpp  webhook.cpp  webhook_signature.cpp
src/capabilities/: audio_mute.cpp  audio_volume.cpp  contact_sensor.cpp  custom.cpp  demand_response_load_control.cpp  execute.cpp  hca.cpp  media_input_source.cpp  media_playback.cpp  media_track_control.cpp  ocf.cpp  power_consumption_report.cpp  proprietary_factory.cpp  refresh.cpp  refrigeration.cpp  remote_control_status.cpp  samsungce.cpp  samsungim.cpp  samsungvd.cpp  sec.cpp  standard.cpp  standard_factory.cpp  switch.cpp  switch_level.cpp  temperature_measurement.cpp  thermostat_cooling_setpoint.cpp  tv_channel.cpp  unknown_capability.cpp  washer_operating_state.cpp
src/oauth2/: oauth2_authenticator.cpp
tests/: CMakeLists.txt  capability_tests.cpp  client_tests.cpp  device_tests.cpp  http_server_tests.cpp  json_utils_tests.cpp  loopback_http.h  main.cpp  oauth2_authenticator_tests.cpp  storage_tests.cpp  types_tests.cpp  webhook_signature_tests.cpp  webhook_tests.cpp
tools/: README.md  fetch_capability_schemas.ps1  generate_capabilities.ps1  generate_proprietary_capabilities.ps1
tools/schemas/: audioMute.v1.json  audioNotification.v1.json  audioTrackData.v1.json  audioVolume.v1.json  battery.v1.json  bridge.v1.json  colorControl.v1.json  colorTemperature.v1.json  contactSensor.v1.json  custom.accessibility.v1.json  custom.deodorFilter.v1.json  custom.deviceReportStateConfiguration.v1.json  custom.disabledCapabilities.v1.json  custom.disabledComponents.v1.json  custom.dishwasherDelayStartTime.v1.json  custom.dishwasherOperatingPercentage.v1.json  custom.dishwasherOperatingProgress.v1.json  custom.dryerDryLevel.v1.json  custom.dustFilter.v1.json  custom.energyType.v1.json  custom.error.v1.json  custom.fridgeMode.v1.json  custom.jobBeginningStatus.v1.json  custom.launchapp.v1.json  custom.picturemode.v1.json  custom.recording.v1.json  custom.soundmode.v1.json  custom.supportedOptions.v1.json  custom.thermostatSetpointControl.v1.json  custom.tvsearch.v1.json  custom.washerAutoDetergent.v1.json  custom.washerAutoSoftener.v1.json  custom.washerRinseCycles.v1.json  custom.washerSoilLevel.v1.json  custom.washerSpinLevel.v1.json  custom.washerWaterTemperature.v1.json  custom.waterFilter.v1.json  demandResponseLoadControl.v1.json  dishwasherOperatingState.v1.json  execute.v1.json  (+106 more)
(+36 files in other folders)
